Agrego todas las paginas y todos los scripts

--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -18,87 +18,10 @@
 </head>
 
 <body style="font-family: Oswald; min-width: 200px;">
-  <header class="p-2">
-    <nav class="navbar navbar-expand-sm bg-body-tertiary">
-      <div class="container-fluid">
-        <div class="row w-100 g-0 align-items-center justify-content-between">
-          <div class="col-6 col-sm-3 col-lg-2">
-            <figure class="navbar-brand m-0 p-0">
-              <img src="../assets/amazing_brand.png" alt="Amazing Events brand logo" class="figure-img w-100 m-0 p-0">
-            </figure>
-          </div>
-          <div class="col-2 col-sm-8 col-lg-6">
-            <button type="button" class="navbar-toggler border-0" data-bs-toggle="collapse" data-bs-target="#navbar"
-              aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse w-100 justify-content-sm-end" id="navbar">
-              <ul
-                class="navbar-nav d-flex flex-column flex-sm-row flex-nowrap align-items-center justify-content-between">
-                <li class="nav-item">
-                  <a href="../../index.html" class="nav-link fs-6">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a href="./upcomingEvents.html" class="nav-link fs-6">Upcoming Events</a>
-                </li>
-                <li class="nav-item">
-                  <a href="./pastEvents.html" class="nav-link fs-6">Past Events</a>
-                </li>
-                <li class="nav-item">
-                  <a href="./contact.html" class="nav-link fs-6">Contact</a>
-                </li>
-                <li class="nav-item">
-                  <a href="./stats.html" class="nav-link fs-6">Stats</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </header>
 
-  <main>
+  <div id="app"></div>
 
-    <!-- Este es el elemento dentro del cual voy a generar la tarjeta de detalles de forma dinámica -->
-    <div class="m-4" id="detailsContainer"></div>
-    
-  </main>
-
-  <footer class="p-2">
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <div class="row w-100 g-0 d-flex flex-column flex-sm-row align-items-center justify-content-center justify-content-sm-between">
-          <div class="col col-sm-2">
-            <ul class="navbar-nav d-flex flex-row flex-nowrap align-items-center justify-content-center gap-2">
-              <li class="nav-item">
-                <figure class="m-0 p-0">
-                  <img src="../assets/facebook.png" alt="facebook logo" class="figure-img m-0" role="button"
-                    style="max-width: 32px; filter: grayscale(1);">
-                </figure>
-              </li>
-              <li class="nav-item">
-                <figure class="m-0 p-0">
-                  <img src="../assets/instagram.png" alt="instagram logo" class="figure-img m-0" role="button"
-                    style="max-width: 32px; filter: grayscale(1);">
-                </figure>
-              </li>
-              <li class="nav-item">
-                <figure class="m-0 p-0">
-                  <img src="../assets/whatsapp.png" alt="whatsapp logo" class="figure-img m-0" role="button"
-                    style="max-width: 32px; filter: grayscale(1);">
-                </figure>
-              </li>
-            </ul>
-          </div>
-          <div class="col col-sm-4 text-center text-sm-end">
-            <p class="fs-6 m-0">AP Desarrollo Web 14 TN</p>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </footer>
-
-  <script src="../scripts/details.js" type="module"></script>
+  <script src="../scripts/details.js"></script>
+  
 </body>
 </html>
