--- a/index.html
+++ b/index.html
@@ -12,26 +12,16 @@
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <title>Amazing Events</title>
 </head>
 
-<body>
+<body style="font-family: Oswald; min-width: 200px;">
 
-  <div id="app">{{ message }}</div>
+  <div id="app"></div>
   
-  <script>
-    const { createApp } = Vue
-
-    createApp({
-      data() {
-        return {
-          message: 'Hello Vue!'
-        }
-      }
-    }).mount('#app')
-  </script>
+  <script src="./src/scripts/home.js"></script>
 
 </body>
 </html>
